--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   google_fonts: 6.1.0
   hexcolor: ^3.0.1
   get: ^4.6.5
+  sleek_circular_slider: ^2.0.1
+  path_provider: ^2.1.2
+  on_audio_query: ^2.9.0
 
 dev_dependencies:
   flutter_test:
