--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,8 +40,9 @@ dependencies:
   hexcolor: ^3.0.1
   get: ^4.6.5
   sleek_circular_slider: ^2.0.1
-  path_provider: ^2.1.2
   on_audio_query: ^2.9.0
+  permission_handler: ^11.3.1
+  device_info_plus: ^10.1.0
 
 dev_dependencies:
   flutter_test:
